# graph-rag-neo4j-sample

./: README.md  main.py  pyproject.toml  sample.env
config/: extraction_prompt.txt  graph_schema.json  settings.py
src/core/: neo4j_client.py
src/ingestion/: embedder.py  extractor.py  loader.py  pipeline.py  splitter.py
src/retrieval/: api.py  generation.py  search.py
